--- a/Logrythmik.Mvc/Logrythmik.Mvc.csproj
+++ b/Logrythmik.Mvc/Logrythmik.Mvc.csproj
@@ -32,6 +32,8 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -229,4 +231,5 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)Logrythmik*" "E:\Projects\Logrythmik\WWM - SneezeBox\_Lib\Assemblies" /Y /I /S</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
 </Project>
